--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ Django==3.1.1
 django-multiselectfield==0.1.12
 pytz==2020.1
 sqlparse==0.3.1
+asgiref==3.2.10
+Django==3.1.1
+django-crispy-forms==1.9.2
+django-multiselectfield==0.1.12
+form==0.0.1
+pytz==2020.1
+sqlparse==0.3.1
