--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,17 @@
 asgiref==3.2.10
-Django==3.1.1
 django-multiselectfield==0.1.12
 pytz==2020.1
 sqlparse==0.3.1
-asgiref==3.2.10
 Django==3.1.1
 django-crispy-forms==1.9.2
-django-multiselectfield==0.1.12
 form==0.0.1
-pytz==2020.1
-sqlparse==0.3.1
-asgiref==3.2.10
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 cryptography==3.1.1
 defusedxml==0.7.0rc1
-Django==3.1.1
-django-crispy-forms==1.9.2
 django-messages==0.6.0
-django-multiselectfield==0.1.12
 django-social-auth==0.7.28
-form==0.0.1
 httplib2==0.18.1
 idna==2.10
 oauth2==1.9.0.post1
@@ -30,63 +20,37 @@ pycparser==2.20
 PyJWT==1.7.1
 python-openid==2.2.5
 python3-openid==3.2.0
-pytz==2020.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==3.3.3
-sqlparse==0.3.1
 urllib3==1.25.10
-
-pandas~=1.1.2asgiref==3.2.10
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
-cryptography==3.1.1
-defusedxml==0.7.0rc1
+pandas~=1.1.2
 diff-match-patch==20200713
-Django==3.1.1
-django-crispy-forms==1.9.2
 django-excel==0.0.10
 django-import-export==2.3.0
-django-messages==0.6.0
-django-multiselectfield==0.1.12
-django-social-auth==0.7.28
 et-xmlfile==1.0.1
-form==0.0.1
-httplib2==0.18.1
-idna==2.10
 jdcal==1.4.1
 lml==0.0.9
 MarkupPy==1.14
 numpy==1.19.2
-oauth2==1.9.0.post1
-oauthlib==3.1.0
 odfpy==1.4.1
 openpyxl==3.0.5
-pandas==1.1.2
-pycparser==2.20
 pyexcel==0.6.4
 pyexcel-io==0.5.20
 pyexcel-ods==0.5.6
 pyexcel-webio==0.1.4
 pyexcel-xls==0.5.9
 pyexcel-xlsx==0.5.8
-PyJWT==1.7.1
 python-dateutil==2.8.1
-python-openid==2.2.5
-python3-openid==3.2.0
-pytz==2020.1
 PyYAML==5.3.1
-requests==2.24.0
-requests-oauthlib==1.3.0
-six==1.15.0
-social-auth-app-django==4.0.0
-social-auth-core==3.3.3
-sqlparse==0.3.1
 tablib==2.0.0
 texttable==1.6.3
-urllib3==1.25.10
 xlrd==1.2.0
 xlwt==1.3.0
+cycler==0.10.0
+kiwisolver==1.2.0
+matplotlib==3.3.2
+Pillow==7.2.0
+pyparsing==2.4.7
