--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -17,3 +17,16 @@ blocks:
             - cache restore
             - pip install --cache-dir .pip_cache -r requirements.txt
             - cache store
+  - name: Test
+    dependencies:
+      - Build
+    task:
+      prologue:
+        commands:
+          - sem-version python 3.7
+          - checkout
+          - cache restore
+          - pip install --cache-dir .pip_cache -r requirements.txt
+      jobs:
+        - name: 'Job #1'
+          commands: []
