--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -39,4 +39,4 @@ blocks:
         - name: Style Check
           commands:
             - pip install flake8
-            - flake8 / --max-line-length=127
+            - flake8 --max-line-length=127
